@@ -13,6 +13,7 @@ requires('LWP::UserAgent'            => '2.033');
 requires('Data::Serializer'          => '0.36');
 requires('Class::Inspector'          => '1.13');
 requires('URI::Find'                 => undef);
+requires('Data::Dump'                => undef);
 
 feature 'Data::Denter (text/x-data-denter) support',
     -default => 0,
